# haskellbook

./: README.md  haskellbook.cabal
Chapter01/: exercises.txt
Chapter02/: FunctionWithLet.hs  FunctionWithWhere.hs  exercises.hs  learn.hs  scratch.hs  test.hs
Chapter03/: Print1.hs  Print2.hs  Print3.hs  Print3Flipped.hs  Reverse.hs  TopOrLocal.hs  exercises.hs  print3broken.hs  scratch.hs
Chapter04/: GreetIfCool.hs  exercises.hs  scratch.hs
Chapter05/: Arith3Broken.hs  DetermineTheType.hs  Exercises.hs  Sing.hs  TypeInference.hs  TypeKwonDo.hs  scratch.hs
Chapter06/: Exercises.hs  scratch.hs
Chapter07/: Arith2.hs  Arith4.hs  Exercises.hs  GreetIfCool3.hs  MatchingTuples.hs  Penguins.hs  RegisteredUser.hs  scratch.hs
Chapter08/: Exercises.hs  Scratch.hs  WordNumber.hs
Chapter09/: BreakOn.hs  Cipher.hs  Exercises.hs  PoemLines.hs  Scratch.hs
Chapter10/: Exercises.hs  Scratch.hs
Chapter11/: Ciphers.hs  Exercises.hs  Generalize.hs  LogicGoats.hs  Phone.hs  Scratch.hs
Chapter12/: Exercises.hs  Scratch.hs
Chapter13/: Exercises.hs  Scratch.hs
Chapter13/hangman/: hangman.cabal
Chapter13/hangman/src/: Main.hs
Chapter13/hangman/tests/: tests.hs
Chapter13/hello/: package.yaml  stack.yaml
Chapter13/hello/app/: Main.hs
Chapter13/hello/src/: DogsRule.hs  Lib.hs
Chapter13/~hangman/src/: Main.hs
Chapter14/: Arbitrary.hs  Ciphers.hs  CoArbitrary.hs  UsingQuickCheck.hs  WordNumber.hs  WordNumberTest.hs
Chapter14/addition/: Addition.hs  addition.cabal
Chapter14/morse/: LICENSE  morse.cabal  stack.yaml
Chapter14/morse/src/: Main.hs  Morse.hs
Chapter14/morse/tests/: tests.hs
Chapter15/: Scratch.hs  Semigroups.hs
Chapter15/Exercises/: Monoids.hs  Semigroups.hs  Validation.hs
Chapter15/orphan-instance/: Listy.hs  ListyInstances.hs
Chapter16/: Exercises.hs  GenerateFunctions.hs  QuickChecking.hs  ReplaceExperiment.hs  ReplaceExperiment2.hs  Scratch.hs  fmap.fmap.hs  functors1.hs  functors3.hs  functors4.hs
Chapter17/: Apl1.hs  BadMonoid.hs  Exercises.hs  Scratch.hs  combinations.hs  constant.hs  cow.hs  identity.hs  lookup.hs  maybe.hs
Chapter18/: BadMonad.hs  EitherMonad.hs  Exercises.hs  Scratch.hs
Chapter19/: Scratch.hs
Chapter19/shawty-prime/: stack.yaml
Chapter19/shawty-prime/app/: Main.hs
Chapter20/: Exercises.hs  Scratch.hs
Chapter21/: HttpStuff.hs  Scratch.hs
Chapter22/: Scratch.hs
Chapter23/: Scratch.hs
Chapter24/: Ini.hs  Scratch.hs
Chapter25/: Scratch.hs
Chapter26/: Scratch.hs
Chapter27/: CoreDump.hs  Scratch.hs
Chapter28/bench/: Main.hs
Chapter28/profiling/: Main.hs
Chapter29/: Scratch.hs
Chapter29/vigenere/: Main.hs
Chapter30/: TryExcept.hs  WhySomeException.hs  wp  writePls.hs
