name:                haskellbook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rhywun/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Huffer
maintainer:          rhywun@rhywun.com
copyright:           2018 Patrick Huffer
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
  other-modules:     Paths_haskellbook
  hs-source-dirs:    .
  default-language:  Haskell2010
  build-depends:     base >=4.7 && <5
                   , time
                   , hspec
                   , QuickCheck
                   , transformers
                   , bytestring
                   , wreq
                   , mtl
                   , random
                   , trifecta
                   , raw-strings-qq
                   , containers
                   , text

executable bench
  main-is:           Main.hs
  other-modules:     Paths_haskellbook
  hs-source-dirs:    Chapter28/bench
  default-language:  Haskell2010
  ghc-options:       -O2
  build-depends:     base >=4.7 && <5
                   , criterion

executable profiling
  main-is:           Main.hs
  other-modules:     Paths_haskellbook
  hs-source-dirs:    Chapter28/profiling
  default-language:  Haskell2010
  ghc-options:       -prof -fprof-auto -rtsopts -O2
  build-depends:     base >=4.7 && <5


executable vigenere
  main-is:           Main.hs
  other-modules:     Paths_haskellbook
  hs-source-dirs:    Chapter29/vigenere
  default-language:  Haskell2010
  build-depends:     base >=4.7 && <5
